---
source: compiler-core/src/javascript/tests/externals.rs
assertion_line: 261
expression: "\n@external(javascript, \"blah\", \"(x => x)\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
---
----- SOURCE CODE

@external(javascript, "blah", "(x => x)")
pub fn one(x: Int) -> Int {
  1
}


----- ERROR
error: Invalid JavaScript function
  ┌─ /src/one/two.rakun:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external JavaScript implementation but the
function name `(x => x)` is not valid.
